# -quantum-taproot-wallet-

./: .env.example  .gitignore  .markdown-link-check.json  COPYRIGHT_REGISTRATION.md  CURSOR_PROMPT.md  DEXTER_INTEGRATION.md  DISPATCH_INSTRUCTIONS.md  FIXES.md  IMPLEMENTATION.md  IP_PROTECTION.md  IP_README.md  IP_hash_2025-12-31.txt  LICENSE  MACOS_SETUP.md  MARKET_ANALYSIS.md  PROVISIONAL_PATENT.md  QUICKSTART.md  README.md  SECURITY.md  TESTING.md  TEST_RESULTS.md  TRADEMARK_APPLICATION.md  VERIFICATION.md  VERIFICATION_STATUS.md  check_balance.sh  check_rpc_port.sh  create_2of2_taproot_signet.sh  deploy_signet.sh  deploy_testnet.sh  dexter_backtesting.py  dexter_cli.sh  dispatch_taproot_instructions.sh  fix_sync_manual.sh  fix_testnet_sync.sh  market_analysis_example.py  package.json  project_hash_2025-12-31.txt  pyproject.toml  recovery.sh  restart_testnet.sh  (+12 more)
.github/agents/: my-agent.agent.md
.github/workflows/: ci.yml  docs.yml  shell-tests.yml  test-deploy.yml
dexter_integration/: __init__.py  agent_wrapper.py
examples/: README.md  bitcoin_analysis_workflow.sh  defi_analysis.py  demo.js
market_analysis/: .env.example  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  agents.py  config.py  data_processor.py  learning.py  requirements.txt  trend_analyzer.py
market_analysis/agents/: __init__.py  master_agent.py  text_agent.py  video_agent.py  (+1 more)
src/: descriptors.js  index.js  pq-crypto.js  quantum-vault.js  signatures.js  sweep.js  taproot-descriptor.js
test/: quantum-bench.js  quantum-vault.test.js  test-descriptor.sh  testnet-descriptor.sh  verify.sh
(+5 files in other folders)
